--- a/filmStyle.css
+++ b/filmStyle.css
@@ -5,19 +5,45 @@ body, html {
 #mainView {
     justify-content: flex-start !important;
     width: 100%;
+    z-index: 2;
+    padding: 0 !important;
 }
 
 #meta {
-    margin-top: 15%;
+    margin-top: 5%;
+    z-index: 2;
     width: 90%;
+    padding: 5rem;
+}
+
+#mainViewPlayer {
+    position: absolute;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    height: 1080px;
+    width: 100vw;
+    object-fit: cover;
+}
+
+#wave {
+    transform: none !important;
+    align-self: center;
+    width: 100vw !important;
 }
 
 
-#filmView {
+.filmView {
     display: flex;
     flex-direction: column;
     padding: 5rem;
     margin-top: 5rem;
+    z-index: 3;
+}
+
+.extraView {
+    margin-top: 0 !important;
+    padding-top: 1rem;
 }
 
 #search  {
@@ -25,13 +51,7 @@ body, html {
     flex-direction: row;
 }
 
-#search input {
-    margin-left: 2rem;
-    width: 15rem;
-}
-
-
-#films {
+.filmSelection {
     margin: 3rem;
     display: flex;
     flex-wrap: wrap;
@@ -42,13 +62,15 @@ body, html {
 .filmCard {
     width: 15rem;
     margin: .25rem;
-    transition: transform .5s;
+    transition: transform .5s, box-shadow 0.5s;
     cursor: pointer;
     flex-shrink: 0;
 }
 
 .filmCard:hover {
     transform: scale(1.15);
+    z-index: 5;
+    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.404);
 }
 
 
@@ -95,13 +117,16 @@ body, html {
 /* film card hover details */
 
 .filmMeta {
+    width: 100%;
+    background: rgb(0,0,0);
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.452) 20%, rgba(0,0,0,0) 99%);
     opacity: 0;
     position: absolute;
     z-index: 2;
     bottom: 0;
-    margin-bottom: 1rem;
     padding: .5rem;
-    transition: opacity .5s;
+    padding-bottom: 1rem;
+    transition: opacity .5s, background .5s;
 }
 
 .filmMetaTitle {
@@ -109,18 +134,35 @@ body, html {
     font-size: 15pt;
 }
 
+.tag {
+    margin: .25rem;
+}
+
 
 /* film details popup */
+
+#overlay, #cardPlayBtnOverlay {
+    background-color: rgba(0, 0, 0, 0.109);
+    z-index: 1;
+    transition: opacity 250ms;
+}
+
+#cardPlayBtnOverlay {
+    opacity: 0.75;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+}
 
 #overlay {
     z-index: 31;
     position: fixed;
     width: 100vw;
     height: 100vh;
-    background-color: rgba(0, 0, 0, 0.109);
     display: none;
     opacity: 0;
-    transition: opacity 250ms;
 }
 
 #filmPopup {
@@ -177,6 +219,13 @@ body, html {
 }
 
 
+@media screen and (max-width: 425px) {
+    #filmPopup {
+        width: 100%;
+        height: 100%;
+    }
+}
+
 .filmMetaInfoWrapper {
     display: flex;
     flex-direction: row;
@@ -226,3 +275,31 @@ html, body {
     position: relative;
     height: 100%;
   }
+
+
+/* fix card image sizing */
+
+.card-image {
+    height: 25rem;
+    overflow: hidden;
+    cursor: pointer;
+}
+
+.image, #imgsrc {
+    height: auto;
+}
+
+@media screen and (max-width: 1024px) {
+    .card-image {
+        height: auto;
+    }
+}
+
+#playerBtn {
+    position: absolute;
+    z-index: 2;
+    left: 50%;
+    top: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    fill: rgba(255, 255, 255, 0.705);
+}
